# VoiceSubtitleGenerator

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  build_cuda.bat  build_cuda.ps1  install_llama_cuda.bat  main.py  package.bat  pyproject.toml  run.bat  voice_subtitle_generator.spec
config/: settings.yaml
config/prompts/: ja_to_ko.txt  review.txt
config/styles/: default.yaml  drama_preset.yaml
scripts/: build.py  download_font.py  package.py
src/: __init__.py  ass_styler.py  audio_analyzer.py  audio_loader.py  config.py  exceptions.py  font_manager.py  logging_config.py  model_manager.py  models.py  pipeline.py  segment_splitter.py  speaker_manager.py  speech_engine.py  subtitle_writer.py  torch_compat.py  translator.py  utils.py  whisperx_engine.py
src/diarization/: __init__.py  base.py  pyannote_engine.py  speechbrain_engine.py
src/stt/: __init__.py  base.py  faster_whisper_engine.py
tests/: __init__.py  conftest.py  test_audio_loader.py  test_config.py  test_models.py  test_subtitle_writer.py
ui/: __init__.py  app.py  components.py  file_list_panel.py  main_window.py  model_dialog.py  preview_panel.py  settings_dialog.py  speaker_dialog.py  subtitle_editor.py
